// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CardFooter /> renders .small correctly 1`] = `
<div
  className="talixo-card-content small"
>
  <div>
    Icon
  </div>
</div>
`;

exports[`<CardFooter /> renders children correctly 1`] = `
<div
  className="talixo-card-content"
>
  <div>
    Icon
  </div>
</div>
`;
